--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express-fileupload": "^1.4.0",
     "express-validator": "^6.14.2",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.9.2",
     "request": "^2.88.2",
     "uuid": "^9.0.0"
   },
