Fixed add new product issue, change upload image element and dateFormat in frontend

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,7 @@
-CLOUDINARY_URL=cloudinary://838331763735293:Nyg1z-kj2cjRR34ER-O2lLrshdc@dfcowl76a
+CLOUDINARY_URL=cloudinary://638174394713967:jHto0FeQeH_6qIsZT3Mm7oSUEhQ@dtmtbvid9
+CLOUDINARY_URL_OLD_VERISON=cloudinary://838331763735293:Nyg1z-kj2cjRR34ER-O2lLrshdc@dfcowl76a
+
+#New account
+CLOUDINARY_CLOUD_NAME=dtmtbvid9
+CLOUDINARY_API_KEY=638174394713967
+CLOUDINARY_API_SECRET=jHto0FeQeH_6qIsZT3Mm7oSUEhQ
