--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,8 @@ CLOUDINARY_URL_OLD_VERISON=cloudinary://838331763735293:Nyg1z-kj2cjRR34ER-O2lLrs
 CLOUDINARY_CLOUD_NAME=dtmtbvid9
 CLOUDINARY_API_KEY=638174394713967
 CLOUDINARY_API_SECRET=jHto0FeQeH_6qIsZT3Mm7oSUEhQ
+
+DATABASE_HOST=localhost
+DATABASE_NAME=maplesyrup
+DATABASE_USER=root
+DATABASE_PASSWORD=johnwick2003
