--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "express-validator": "^6.14.2",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.12.0",
     "nodemailer": "^6.9.2",
     "request": "^2.88.2",
     "uuid": "^9.0.0"
